--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   "homepage": "https://github.com/Sebascrab/Blog-With-Model-View-Controller#readme",
   "dependencies": {
     "bcrypt": "^5.1.0",
+    "bulma": "^0.9.4",
     "connect-session-sequelize": "^7.1.5",
     "cookie": "^0.5.0",
     "dotenv": "^16.0.3",
